--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "liquid-glass-react": "^1.1.1",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
