--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.13.0",
     "liquid-glass-react": "^1.1.1",
     "next": "16.0.3",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
