--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.3",
     "ogl": "^1.0.11",
     "react": "19.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
