--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
